--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.9"
 
 services:
   app:
+    depends_on:
+      - db
     build:
       context: .
       args:
@@ -9,6 +11,23 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
+      - ./src:/src
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME = devdb
+      - DB_USER=devuser
+      - DB_PASSWORD=changeme
+
+  db:
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postresql/data
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=devuser
+      - POSTGRES_PASSWORD=changeme
+
+volumes:
+  dev-db-data:
