--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,8 +7,9 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-python.python"
-            ]
+				"ms-python.python",
+				"ms-azuretools.vscode-docker"
+			]
         }
     }
 }
